fixed button spacing and other design errors

--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
 body{
-    margin: 0;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: auto;
     background-color: hsl(0, 0%, 95%);
 }
 #calculator{
     font-family: Arial, sans-serif;
     background-color: hsl(0, 0%, 15%);
     border-radius: 15px;
-    max-width: 500px;
+    max-width: fit-content;
+    height: fit-content;
     overflow: hidden;
 }
 #display{
-    width: 100%;
-    padding: 20px;
-    font-size: 5rem;
+    width: 405px;
+    padding: 15px;
+    font-size: 3rem;
     text-align: left;
     border: none;
     background-color: hsl(0, 0%, 20%);
@@ -24,26 +25,29 @@ body{
 }
 #keys{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    padding: 25px;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: repeat(5, 100px);
+    gap: 5px;
+    padding: 10px;
 }
 button{
-    width: 100px;
-    height: 100px;
-    border-radius: 15px;
+    width: 96.25px;
+    height: 96.25px;
+    border-radius: 12px;
     border: none;
     background-color: hsl(0, 0%, 30%);
     color: white;
-    font-size: 3rem;
-    font-weight: bold;
+    font-size: 2rem;
     cursor: pointer;
+    padding: 0;
+    margin-left: 3px;
 }
 button:hover{
     background-color: hsl(0, 0%, 40%);
 }
 button:active{
     background-color: hsl(0, 0%, 50%);
+    color: #D0F0C0;
 }
 .operator-btn{
     background-color: hsl(35, 100%, 55%);
@@ -53,13 +57,13 @@ button:active{
 }
 .operator-btn:active{
     background-color: hsl(35, 100%, 75%);
+    color: white;
 }
 .c-btn{
     grid-column: span 4;
-    width: 215px;
-    height: 100px;
     color: #ED2939;
 }
 .c-btn:active{
     background-color: #905D5D;
+    color: #ED2939;
 }
